{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 687,
  "lineage": "f349251a-e387-5358-aa6e-fb35cd2b79c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lms_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418133399:loadbalancer/app/lms-load-balancer/440257626f87e0ef",
            "arn_suffix": "app/lms-load-balancer/440257626f87e0ef",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lms-load-balancer-573273985.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418133399:loadbalancer/app/lms-load-balancer/440257626f87e0ef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lms-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-016e2591b7f949d99"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e63b67043cd1f4aa"
              },
              {
                "subnet_id": "subnet-0ffd405711375c017"
              }
            ],
            "subnets": [
              "subnet-0e63b67043cd1f4aa",
              "subnet-0ffd405711375c017"
            ],
            "vpc_id": "vpc-0816ba4118fcc07c3",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418133399:listener/app/lms-load-balancer/440257626f87e0ef/44ff57880a19d583",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418133399:listener/app/lms-load-balancer/440257626f87e0ef/44ff57880a19d583",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418133399:loadbalancer/app/lms-load-balancer/440257626f87e0ef",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lms_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "my_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418133399:targetgroup/lms-target-group/c39b13225ffa4cd4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418133399:listener-rule/app/lms-load-balancer/440257626f87e0ef/44ff57880a19d583/db6cedda20a0e12e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418133399:listener-rule/app/lms-load-balancer/440257626f87e0ef/44ff57880a19d583/db6cedda20a0e12e",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418133399:listener/app/lms-load-balancer/440257626f87e0ef/44ff57880a19d583",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lms_lb",
            "aws_lb_listener.my_listener",
            "aws_lb_target_group.my_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418133399:targetgroup/lms-target-group/c39b13225ffa4cd4",
            "arn_suffix": "targetgroup/lms-target-group/c39b13225ffa4cd4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418133399:targetgroup/lms-target-group/c39b13225ffa4cd4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lms-target-group",
            "port": 2000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0816ba4118fcc07c3"
          }
        }
      ]
    }
  ]
}